src/sk4rbonka/main/default/objects/sk4_transfer__c/sk4_transfer__c.object-meta.xml
<CustomObject>
    <label>Transfer</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Transfers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>