src/sk4rbonka/main/default/objects/sk4_transfer__c/fields/sk4_amountAfter__c.field-meta.xml
<CustomField>
    <fullName>sk4_amountAfter__c</fullName>
    <label>Amount After</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>