src/sk4rbonka/main/default/objects/sk4_transfer__c/fields/sk4_child__c.field-meta.xml
<CustomField>
    <fullName>sk4_child__c</fullName>
    <label>Child</label>
    <referenceTo>sk4_child__c</referenceTo>
    <relationshipLabel>Transfers</relationshipLabel>
    <relationshipName>Transfers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>