src/sk4rbonka/main/default/objects/sk4_transfer__c/fields/sk4_date__c.field-meta.xml
<CustomField>
    <fullName>sk4_date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>