src/sk4rbonka/main/default/objects/sk4_transfer__c/fields/sk4_dateTime__c.field-meta.xml
<CustomField>
    <fullName>sk4_dateTime__c</fullName>
    <defaultValue>now()</defaultValue>
    <label>DateTime</label>
    <type>DateTime</type>
</CustomField>