src/sk4rbonka/main/default/objects/sk4_transfer__c/fields/sk4_description__c.field-meta.xml
<CustomField>
    <fullName>sk4_description__c</fullName>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>