src/sk4rbonka/main/default/objects/sk4_transfer__c/fields/sk4_family__c.field-meta.xml
<CustomField>
    <fullName>sk4_family__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Family</label>
    <referenceTo>sk4_family__c</referenceTo>
    <relationshipLabel>Transfers</relationshipLabel>
    <relationshipName>Transfers</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>