src/sk4rbonka/main/default/objects/sk4_transfer__c/fields/sk4_parent__c.field-meta.xml
<CustomField>
    <fullName>sk4_parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent</label>
    <referenceTo>sk4_parent__c</referenceTo>
    <relationshipLabel>Transfers</relationshipLabel>
    <relationshipName>Transfers</relationshipName>
    <type>Lookup</type>
</CustomField>