src/sk4rbonka/main/default/objects/sk4_transfer__c/fields/sk4_transferAmount__c.field-meta.xml
<CustomField>
    <fullName>sk4_transferAmount__c</fullName>
    <label>Transfer Amount</label>
    <precision>7</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>