src/sk4rbonka/main/default/objects/sk4_transfer__c/fields/sk4_type__c.field-meta.xml
<CustomField>
    <fullName>sk4_type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PocketMoney</fullName>
            </value>
            <value>
                <fullName>Cumulation</fullName>
            </value>
            <value>
                <fullName>Withdraw</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Deduction</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>