src/sk4rbonka/main/default/objects/sk4_transfer__c/recordTypes/Cumulation.recordType-meta.xml
<RecordType>
    <fullName>Cumulation</fullName>
    <active>true</active>
    <label>Cumulation</label>
</RecordType>