src/sk4rbonka/main/default/objects/sk4_transfer__c/recordTypes/Standard.recordType-meta.xml
<RecordType>
    <fullName>Standard</fullName>
    <active>true</active>
    <label>Standard</label>
</RecordType>