src/sk4rbonka/main/default/objects/sk4_transfer__c/validationRules/Cumulation_type_cannot_have_parent.validationRule-meta.xml
<ValidationRule>
    <fullName>Cumulation_type_cannot_have_parent</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
     RecordType.Name = &apos;Cumulation&apos;,
				!ISBLANK(sk4_parent__c)
)</errorConditionFormula>
    <errorMessage>Cumulation Type Transfer cannot have Parent set.</errorMessage>
</ValidationRule>