src/sk4rbonka/main/default/objects/sk4_transfer__c/validationRules/Cumulation_type_must_have_Cumulation_obj.validationRule-meta.xml
<ValidationRule>
    <fullName>Cumulation_type_must_have_Cumulation_obj</fullName>
    <active>true</active>
    <errorConditionFormula>AND (
    RecordType.DeveloperName = &apos;Cumulation&apos;,
				ISBLANK(sk4_cumulation__c)
)</errorConditionFormula>
    <errorMessage
    >Cumulation Transfer must have Cumulation object related</errorMessage>
</ValidationRule>