src/sk4rbonka/main/default/objects/sk4_transfer__c/validationRules/Standard_type_cant_have_Cumulation_obj.validationRule-meta.xml
<ValidationRule>
    <fullName>Standard_type_cant_have_Cumulation_obj</fullName>
    <active>true</active>
    <errorConditionFormula>AND (
    RecordType.DeveloperName &lt;&gt; &apos;Cumulation&apos;,
				!ISBLANK(sk4_cumulation__c)
)</errorConditionFormula>
    <errorMessage
    >Non-Cumulation Transfer cannot have Cumulation object related!</errorMessage>
</ValidationRule>