src/sk4rbonka/main/default/objects/sk4_transfer__c/validationRules/Standard_type_must_have_Parent_set.validationRule-meta.xml
<ValidationRule>
    <fullName>Standard_type_must_have_Parent_set</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
     RecordType.Name = &apos;Standard&apos;,
				ISBLANK(sk4_parent__c)
)</errorConditionFormula>
    <errorMessage>Standard Type Transfer must have Parent set.</errorMessage>
</ValidationRule>