src/sk4rbonka/main/default/objects/sk4_transfer__c/validationRules/Transfer_family_and_child_family_same.validationRule-meta.xml
<ValidationRule>
    <fullName>Transfer_family_and_child_family_same</fullName>
    <active>true</active>
    <errorConditionFormula>sk4_family__r.Id  &lt;&gt;  sk4_child__r.sk4_family__r.Id</errorConditionFormula>
    <errorMessage>Transfer&apos;s family and child&apos;s family must be the same</errorMessage>
</ValidationRule>