src/sk4rbonka/main/default/objects/sk4_transfer__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>sk4_date__c</columns>
    <columns>sk4_type__c</columns>
    <columns>sk4_transferAmount__c</columns>
    <columns>sk4_amountAfter__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>sk4_child__c</field>
        <operation>equals</operation>
        <value>Julek</value>
    </filters>
    <label>All</label>
</ListView>